docs: add HTTPS support info to CLAUDE.md